migration/pagasus/pegasus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pegasus-api-rest
spec:
  selector:
    matchLabels:
      app: pegasus-api-rest
  template:
    metadata:
      labels:
        app: pegasus-api-rest
    spec:
      containers:
      - name: pegasus
        image: knoldusstudio9/pegasus-rest-api:1.0
        resources: {}
          # limit:
          #   cpu: 
          #   memory: 
        ports:
        - containerPort: 9000
        livenessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 4
          failureThreshold: 10
          initialDelaySeconds: 25
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 2
          failureThreshold: 10
          initialDelaySeconds: 15
          successThreshold: 1
