migration/pagasus/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pegasus-api-rest
spec:
  selector:
    app: pegasus-api-rest
  ports:
  - name: traffic
    port: 9000
    targetPort: 9000
    protocol: TCP
  type: ClusterIP
