migration/pagasus/ingress .yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pegasus-api-rest
spec:
  ingressClassName: nginx
  rules:
  - host: pegasus.s9.devopscloud.link
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pegasus-api-rest
            port:
              number: 9000
